# solodet

./: .gitignore  CLAUDE.md  environment.yml  plan.md  pyproject.toml  research.md
configs/eval/: scale_bins.yaml
configs/inference/: sahi.yaml  tracker.yaml
configs/model/: yolov8m-p2-cbam.yaml  yolov8m-p2.yaml
configs/train/: aicloud_full.yaml  aicloud_smoke.yaml  baseline.yaml  tiny_focus.yaml
scripts/: evaluate.py  infer.py  prepare_data.py  train.py  visualize.py
slurm/: build_container.sh  smoke_test.sh  train_full.sh
solodet/: __init__.py
solodet/eval/: __init__.py  evaluate.py  metrics.py
solodet/inference/: __init__.py  detector.py  multiframe.py  tracker.py  video.py
solodet/model/: __init__.py  attention.py  register.py
solodet/utils/: __init__.py  config.py  io.py  viz.py
tests/: conftest.py  test_pipeline.py
